@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	7.0
+Version:	7.1
 Entered-date:	2007-04-28
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v7.1 big-endian fixes for -I, --Istdin, --Istdout
 		v7.0 major overhaul, proper SATA support, new features and tweaks
 		v6.9 --Istdin fix, new -s flag, new SCT reporting, fixed -T x2 error..
 		v6.8 improve parsing/operation of --Istdin function
@@ -56,7 +57,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		60K hdparm-7.0.tar.gz
+		60K hdparm-7.1.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
